# 2048

./: .gitignore  CMakeLists.txt  README.md
resources/: images.qrc
src/: game.cc  game.h  gameLogic.cc  gameLogic.h  main.cc  mainWindow.cc  mainWindow.h  observer.h  subject.h  tile.cc  tile.h
ui/: mainWindow.ui
